2008-11-29  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.xml: Updated to the current stable release 5.2.2
	  of Gutenprint.

	* driver/splix2.xml: Added note about bug fixes in the currently
	  downloadable driver packages.

2008-11-26  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/laserjet.xml, driver/ljet2p.xml, driver/ljet3.xml,
	  driver/ljet3d.xml, driver/ljet4.xml, driver/ljet4d.xml,
	  driver/ljetplus.xml, driver/pxl1010.xml, driver/pxlcolor.xml,
	  driver/pxlmono.xml: Added links to Ghostscript patches which
	  fix the broken input tray selection functionality.

2008-11-25  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-LaserJet_1100.xml, printer/HP-LaserJet_1100A.xml,
	  printer/HP-LaserJet_4L.xml, printer/HP-LaserJet_5L.xml,
	  printer/Samsung-ML-1750.xml: Updated text and recommended
	  driver.

	* opt/PJL-Duplex.xml: Made this option not being used for the
	  "ljet3d" driver. This driver controls Duplex via the standard
	  Ghostscript/PostScript method.

	* driver/cdj1600.xml, driver/cdj670.xml, driver/cdj850.xml,
	  driver/cdj880.xml, driver/cdj890.xml, driver/cdj970.xml,
	  driver/st800.xml: Marked these drivers obsolete. There are other
	  drivers which support these printers in a better way.

	* printer/Xerox-Phaser-6110.xml, printer/Xerox-Phaser_6110.xml,
	  printer/Xerox-Phaser-6115MFP.xml,
	  printer/Xerox-Phaser_6115MFP.xml, driver/foo2qpdl.xml,
	  db/oldprinterids: Renamed these printer entry so that they are
	  written the same way as for the other Xerox printers. This
	  assures that they appear at the right place in printer listings
	  of printer setup tools.

	* printer/HP-2000C.xml, printer/HP-2500CM.xml,
	  printer/HP-2500C.xml, printer/HP-2563.xml, printer/HP-910.xml,
	  printer/HP-915.xml, printer/HP-Business_Inkjet_1000.xml,
	  printer/HP-Business_Inkjet_1100.xml,
	  printer/HP-Business_Inkjet_1200.xml,
	  printer/HP-Business_Inkjet_2200.xml,
	  printer/HP-Business_Inkjet_2230.xml,