@@ -168,6 +168,12 @@
    </functionality>
   </printer>
   <printer>
+   <id>printer/Samsung-ML-1640</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
    <id>printer/Samsung-ML-1710</id>
    <functionality>
     <monochrome />
@@ -235,6 +241,12 @@
   </printer>
   <printer>
    <id>printer/Samsung-ML-3560</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Samsung-SCX-4200</id>
    <functionality>
     <monochrome />
    </functionality>
@@ -316,6 +328,12 @@
   </printer>
   <printer>
    <id>printer/Xerox-Phaser_6110</id>
+  </printer>
+  <printer>
+   <id>printer/Xerox-WorkCentre_3119</id>
+   <functionality>
+    <monochrome />
+   </functionality>
   </printer>
  </printers>
 </driver>
