@@ -4,7 +4,8 @@
 	  of Gutenprint.
 
 	* driver/splix2.xml: Added note about bug fixes in the currently
-	  downloadable driver packages.
+	  downloadable driver packages. Updated list of supported
+	  printers.
 
 2008-11-26  Till Kamppeter <till.kamppeter@gmail.com>
 
